<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controller.skillActivity">
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/beginnerballerbg"
            android:id="@+id/imageView4" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:scaleType="centerCrop"
            android:contentDescription="@string/background_image"/>
    <ImageView
            android:layout_width="88dp"
            android:layout_height="29dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/imageView2"
            android:contentDescription="@string/app_logo" tools:layout_editor_absoluteY="24dp"
            tools:layout_editor_absoluteX="162dp" tools:ignore="MissingConstraints"/>
    <TextView
            android:text="@string/i_am_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:fontFamily="@font/montserrat" android:textSize="18sp"
            android:textColor="@color/colorAccent"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp">
        <ToggleButton
                android:text="@string/beginer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/biginerSkillBtn" android:layout_weight="1"
                android:background="@drawable/swoosh_toggle" android:textColor="@color/colorAccent"
                android:textOn="@string/beginer" android:textOff="@string/beginer"
                android:layout_marginEnd="16dp" android:textSize="14sp" android:onClick="onBiginerClicked"/>
        <ToggleButton
                android:text="@string/baller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/ballerSkillBtn" android:layout_weight="1"
                android:background="@drawable/swoosh_toggle" android:textColor="@color/colorAccent"
                android:textOff="@string/baller" android:textOn="@string/baller"
                android:layout_marginStart="16dp" android:onClick="onBallerClicked"/>
    </LinearLayout>
    <Button
            android:text="@string/finish"
            android:layout_width="0dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/skillFinishBtn" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" android:background="@drawable/swoosh_button" android:fontFamily="@font/montserrat"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:onClick="onSkillFinishClicked"/>


</android.support.constraint.ConstraintLayout>