<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controller.FinishActivity">

    <ImageView
            android:src="@drawable/exercisebg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/imageView5" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:scaleType="centerCrop" android:contentDescription="@string/background_image"/>
    <TextView
            android:text="@string/searchleaguestext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/searchLeaguesText"
            app:layout_constraintTop_toTopOf="@+id/imageView5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:textSize="24sp"
            tools:text="@string/search_league" android:textColor="@color/colorAccent"
            android:fontFamily="@font/montserrat" android:textAlignment="center" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.43" android:layout_marginTop="32dp"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/progressBar" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/searchLeaguesText" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.0"/>
</android.support.constraint.ConstraintLayout>